# NOVA

./: .env.example  .gitignore  CLAUDE.md  LICENSE.txt  README.md  _ruff.txt  pyproject.toml  pytest_out.txt  ruff_output.txt  test_output.txt  test_output_temp.txt
docs/: PRD.md
docs/plan/: NOVA_Heartbeat_Design.md  NOVA_Phase3_Memory_Architecture.md  PLAN.md  prompt_heartbeat_1_data_layer.md  prompt_heartbeat_2_scheduler_audio.md  prompt_heartbeat_3_integration.md
models/: hey_nova.onnx
src/nova/: __init__.py  config.py  main.py  orchestrator.py
src/nova/audio/: capture.py  clap_detector.py  playback.py  streaming_tts.py  wake_word.py  wake_word_oww.py
src/nova/heartbeat/: __init__.py  audio.py  queue.py  scheduler.py
src/nova/memory/: context.py  conversation.py  embeddings.py  memory_store.py  persistent.py  prompt_assembler.py  retriever.py
src/nova/providers/: base.py  router.py
src/nova/providers/llm/: gemini.py  groq_llm.py
src/nova/providers/stt/: groq_whisper.py
src/nova/providers/tts/: cloudflare_tts.py  edge_tts_provider.py  google_cloud_tts.py
src/nova/tools/: dictation.py  display_control.py  heartbeat_reminders.py  music_player.py  network_control.py  notes.py  registry.py  reminders.py  system_control.py  system_info.py  time_date.py  web_search.py
src/nova/utils/: logger.py  tts_quota.py
tests/: ruff_output.txt  ruff_results.txt  test_all_tools.py  test_config.py  test_context.py  test_conversation_manager.py  test_embeddings.py  test_full_output.txt  test_gemini_stream_tools.py  test_heartbeat_audio.py  test_heartbeat_data.py  test_heartbeat_integration.py  test_heartbeat_output.txt  test_heartbeat_scheduler.py  test_memory_store.py  test_prompt_assembler.py  test_results.txt  test_results_out.txt  test_retriever.py  test_router.py  test_streaming_tts.py  test_tools.py
