[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova"
version = "0.1.0"
description = "Neural-Orchestrated Voice Assistant — cloud-powered voice AI for low-spec hardware"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zhafran" },
]
dependencies = [
    "httpx>=0.27",
    "edge-tts>=6.1",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
    "python-mpv>=1.0",
    "rich>=13.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nova"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
